--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5010
 JWT_SECRET = 'sampleJWTauth'
-API_BASE_URL='https://mfprodigy.bfccapital.com'
-API_BASE_URL_PROD='https://mfprodigy.bfccapital.com/prodigyfinallive'
-API_BASE_URL_WMS='https://mfprodigy.bfccapital.com/wmsapi'
-API_URL_WMS='https://wms.bfccapital.com'
+API_BASE_URL=https://mfprodigy.bfccapital.com
+API_BASE_URL_PROD=https://mfprodigy.bfccapital.com/prodigyfinallive
+API_BASE_URL_WMS=https://mfprodigy.bfccapital.com/wmsapi
+API_URL_WMS=https://wms.bfccapital.com
